--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="aOC75XljmMMceKSErkZEW_nsJoFYSLoJ-hvpIuPXG-o" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Scam alert: Read the full review of incoreinv.com. Is incoreinv.com legit or a scam? Discover real complaints from victims and avoid losing your money.">
